@@ -11,6 +11,10 @@ Version 1.10.1+svn:
    * Updated translations: French Galician, German, Italian, Korean,
      Portuguese (Brazil), Russian, Slovak, Spanish.
 
+ * User interface:
+   * Fixed provided saved game filenames being ignored when requesting to
+     save a MP game due to a network or OOS error (bug #19562).
+
  * Miscellaneous and bug fixes:
    * Fix bug #19505: broken stone bridge transitions.
 
