@@ -10,6 +10,9 @@ Version 1.10.1+svn:
      Portuguese (Brazil), Russian, Slovak, Spanish
  * Multiplayer:
    * Ignore Pango markup in map descriptions (bug #19210)
+ * User interface:
+   * Fixed provided saved game filenames being ignored when requesting to
+     save a MP game due to a network or OOS error (bug #19562)
  * WML engine:
    * Fixed bug #19498: [modify_unit] duplicating units if x,y changed
  * Miscellaneous and bug fixes:
